--- a/admin/pages/rflujo.html
+++ b/admin/pages/rflujo.html
@@ -41,6 +41,9 @@
     div.panel-body{
     	min-height: 1px;
     }
+    .boton{
+        cursor:pointer;
+    }
     </style>
 
 </head>
@@ -123,11 +126,12 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header"><i class="fa fa-bar-chart-o fa-fw" style="color:"></i>Estadisticas de Reporte de Planillas</h1>
+                    <h1 class="page-header"><i class="fa fa-bar-chart-o fa-fw" style="color:"></i>Reporte de Flujo de Estudiantes</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
             <div class="row">
+            <div class="well well-small" id="combo_mes"></div>
                 <div role="tabpanel">
                   <!-- Nav tabs -->
                   <ul class="nav nav-tabs" role="tablist">
@@ -138,43 +142,89 @@
                   <!-- Tab panes -->
                   <div class="tab-content">
                     <div role="tabpanel" class="tab-pane active" id="cs1"><br>
-                    	<div class="well well-small" id="combo_mes">
-                    		
-                    	</div>
 						<!--Collapse -->
 						<div class="well well-small pointer" data-toggle="collapse" data-target="#planilla_mes_s1">
-						  <a href="#" onclick="go_to('planilla_mes_s1','planilla',1)"><i class="fa fa-bars"></i>   Registro del mes</a>
+						  <a class="boton" onclick="go_to('planilla_mes_s1','planilla',1,0)"><i class="fa fa-bars"></i>   Registro del mes</a>
 						</div>						 
 						<div id="planilla_mes_s1" class="collapse out">
 						</div>
-						<div class="well" data-toggle="collapse" data-target="#r1_2">
-						  <a href="#"><i class="fa fa-bars"></i>   Flujo de estudiantes por horas</a>
+
+						<div class="well" data-toggle="collapse" data-target="#chart_exh_s1">
+						  <a class="boton" onclick="go_to('chart_exh_s1','e_x_h',1,'chart_exh_cv1')"><i class="fa fa-bars"></i>   Flujo de estudiantes por horas</a>
 						</div>						 
-						<div id="r1_2" class="collapse out">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.
+						<div id="chart_exh_s1" class="collapse out">
+                            <canvas id="chart_exh_cv1" width="800" height="400"></canvas>                  
+                        </div>
 
-							Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est. Sed lectus. Praesent elementum hendrerit tortor. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.
-
-							Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae facilisis libero dolor a purus. Sed vel lacus. Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam pellentesque mauris ut lectus. Nunc tellus ante, mattis eget, gravida vitae, ultricies ac, leo. Integer leo pede, ornare a, lacinia eu, vulputate vel, nisl.</div>
-						<div class="well" data-toggle="collapse" data-target="#r3">
-						  <a href="#"><i class="fa fa-bars"></i>   Flujo de estudiantes por día (General)</a>
+						<div class="well" data-toggle="collapse" data-target="#chart_exd_s1">
+						  <a class="boton" onclick="go_to('chart_exd_s1','e_x_d',1,'chart_exd_cv1')"><i class="fa fa-bars"></i>   Flujo de estudiantes por día (General)</a>
 						</div>						 
-						<div id="r3" class="collapse out">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.
+						<div id="chart_exd_s1" class="collapse out">
+                            <canvas id="chart_exd_cv1" width="800" height="400"></canvas>
+                        </div>
 
-							Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est. Sed lectus. Praesent elementum hendrerit tortor. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.
-
-							Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae facilisis libero dolor a purus. Sed vel lacus. Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam pellentesque mauris ut lectus. Nunc tellus ante, mattis eget, gravida vitae, ultricies ac, leo. Integer leo pede, ornare a, lacinia eu, vulputate vel, nisl.</div>
 						<div class="well" data-toggle="collapse" data-target="#r4">
-						  <a href="#"><i class="fa fa-bars"></i>   Flujo de estudiantes por día (Detallado)</a>
+						  <a class="boton" onclick="go_to('chart_exh3_s1','e_x_h',1)"><i class="fa fa-bars"></i>   Flujo de estudiantes por día (Detallado)</a>
 						</div>						 
-						<div id="r4" class="collapse out">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.
-
-							Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est. Sed lectus. Praesent elementum hendrerit tortor. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.
-
-							Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae facilisis libero dolor a purus. Sed vel lacus. Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam pellentesque mauris ut lectus. Nunc tellus ante, mattis eget, gravida vitae, ultricies ac, leo. Integer leo pede, ornare a, lacinia eu, vulputate vel, nisl.</div>
+						<div id="r4" class="collapse out">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</div>
 						<!-- -->
                     </div>
-                    <div role="tabpanel" class="tab-pane" id="cs2"><br></div>
-                    <div role="tabpanel" class="tab-pane" id="cs3"><br></div>
+                    <div role="tabpanel" class="tab-pane" id="cs2"><br>
+                        <!--Collapse -->
+                        <div class="well well-small pointer" data-toggle="collapse" data-target="#planilla_mes_s2">
+                          <a class="boton" onclick="go_to('planilla_mes_s2','planilla',2,0)"><i class="fa fa-bars"></i>   Registro del mes</a>
+                        </div>                       
+                        <div id="planilla_mes_s2" class="collapse out">
+                        </div>
+
+                        <div class="well" data-toggle="collapse" data-target="#chart_exh_s2">
+                          <a class="boton" onclick="go_to('chart_exh_s2','e_x_h',2,'chart_exh_cv2')"><i class="fa fa-bars"></i>   Flujo de estudiantes por horas</a>
+                        </div>                       
+                        <div id="chart_exh_s2" class="collapse out">
+                            <canvas id="chart_exh_cv2" width="800" height="400"></canvas>                  
+                        </div>
+
+                        <div class="well" data-toggle="collapse" data-target="#chart_exd_s2">
+                          <a class="boton" onclick="go_to('chart_exd_s2','e_x_d',2,'chart_exd_cv2')"><i class="fa fa-bars"></i>   Flujo de estudiantes por día (General)</a>
+                        </div>                       
+                        <div id="chart_exd_s2" class="collapse out">
+                            <canvas id="chart_exd_cv2" width="800" height="400"></canvas>
+                        </div>
+
+                        <div class="well" data-toggle="collapse" data-target="#r4">
+                          <a class="boton" onclick="go_to('chart_exh3_s1','e_x_h',1)"><i class="fa fa-bars"></i>   Flujo de estudiantes por día (Detallado)</a>
+                        </div>                       
+                        <div id="r4" class="collapse out">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</div>
+                        <!-- -->
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="cs3"><br>
+                        <!--Collapse -->
+                        <div class="well well-small pointer" data-toggle="collapse" data-target="#planilla_mes_s3">
+                          <a class="boton" onclick="go_to('planilla_mes_s3','planilla',3,0)"><i class="fa fa-bars"></i>   Registro del mes</a>
+                        </div>                       
+                        <div id="planilla_mes_s3" class="collapse out">
+                        </div>
+
+                        <div class="well" data-toggle="collapse" data-target="#chart_exh_s3">
+                          <a class="boton" onclick="go_to('chart_exh_s3','e_x_h',3,'chart_exh_cv3')"><i class="fa fa-bars"></i>   Flujo de estudiantes por horas</a>
+                        </div>                       
+                        <div id="chart_exh_s3" class="collapse out">
+                            <canvas id="chart_exh_cv3" width="800" height="400"></canvas>                  
+                        </div>
+
+                        <div class="well" data-toggle="collapse" data-target="#chart_exd_s3">
+                          <a class="boton" onclick="go_to('chart_exd_s3','e_x_d',3,'chart_exd_cv3')"><i class="fa fa-bars"></i>   Flujo de estudiantes por día (General)</a>
+                        </div>                       
+                        <div id="chart_exd_s3" class="collapse out">
+                            <canvas id="chart_exd_cv3" width="800" height="400"></canvas>
+                        </div>
+
+                        <div class="well" data-toggle="collapse" data-target="#r4">
+                          <a class="boton" onclick="go_to('chart_exh3_s1','e_x_h',1)"><i class="fa fa-bars"></i>   Flujo de estudiantes por día (Detallado)</a>
+                        </div>                       
+                        <div id="r4" class="collapse out">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</div>
+                        <!-- -->
+                    </div>
                   </div>
                 </div>
             </div>
@@ -205,6 +255,9 @@
 
     <!-- growl alerts -->
     <script src="../bower_components/growl/bootstrap-growl.js"></script>
+
+    <!-- Chart.js charts -->
+    <script src="../bower_components/Chart.js/Chart.js"></script>
 
 
     <!-- Custom Scripts -->
