faltan ajustes en graficas

--- a/admin/pages/rflujo.html
+++ b/admin/pages/rflujo.html
@@ -164,9 +164,58 @@
                         </div>
 
 						<div class="well" data-toggle="collapse" data-target="#r4">
-						  <a class="boton" onclick="go_to('chart_exh3_s1','e_x_h',1)"><i class="fa fa-bars"></i>   Flujo de estudiantes por día (Detallado)</a>
+						  <a class="boton" onclick="go_to('chart_gr_s1_1','e_x_dd',1,'chart_gr')"><i class="fa fa-bars"></i>   Flujo de estudiantes por día (Detallado)</a>
 						</div>						 
-						<div id="r4" class="collapse out">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</div>
+						<div id="r4" class="collapse out">
+							<div class="col-md-4">
+							<div class="panel panel-primary">
+							<div class="panel-heading">Flujo de 8:00am a 9:59am</div>
+							  <div class="panel-body">
+							    <canvas id="chart_gr_s1_1" width="200" height="200"></canvas>
+							  </div>
+							</div>
+							</div>
+							<div class="col-md-4">
+							<div class="panel panel-primary">
+							<div class="panel-heading">Flujo de 10:00am a 11:59am</div>
+							  <div class="panel-body">
+							    <canvas id="chart_gr_s1_2" width="200" height="200"></canvas>
+							  </div>
+							</div>
+							</div>
+							<div class="col-md-4">
+							<div class="panel panel-primary">
+							<div class="panel-heading">Flujo de 13:00m a 14:59pm</div>
+							  <div class="panel-body">
+							    <canvas id="chart_gr_s1_3" width="200" height="200"></canvas>
+							  </div>
+							</div>
+							</div>
+							<div class="col-md-4">
+							<div class="panel panel-primary">
+							<div class="panel-heading">Flujo de 15:00pm a 16:59pm</div>
+							  <div class="panel-body">
+							    <canvas id="chart_gr_s1_4" width="200" height="200"></canvas>
+							  </div>
+							</div>
+							</div>
+							<div class="col-md-4">
+							<div class="panel panel-primary">
+							<div class="panel-heading">Flujo de 17:00pm a 18:59pm</div>
+							  <div class="panel-body">
+							    <canvas id="chart_gr_s1_5" width="200" height="200"></canvas>
+							  </div>
+							</div>
+							</div>
+							<div class="col-md-4">
+							<div class="panel panel-primary">
+							<div class="panel-heading">Flujo de 19:00pm a 20:59pm</div>
+							  <div class="panel-body">
+							    <canvas id="chart_gr_s1_6" width="200" height="200"></canvas>
+							  </div>
+							</div>
+							</div>
+						</div>
 						<!-- -->
                     </div>
                     <div role="tabpanel" class="tab-pane" id="cs2"><br>
