--- a/admin/pages/flujo.html
+++ b/admin/pages/flujo.html
@@ -138,6 +138,8 @@
                                 </li>
                                 <li><a href="#messages" data-toggle="tab">Sala 3</a>
                                 </li>
+                                <li><a href="#reservas" data-toggle="tab">Horarios de reserva</a>
+                                </li>
                             </ul>
 
                             <!-- Tab panes -->
@@ -363,6 +365,24 @@
                                         </div>
                                     </div>
                                     <!-- /.col-lg-4 -->
+                                </div>
+                                <div class="tab-pane fade" id="reservas"><br>
+                                    <div class="col-lg-12">
+                                        <div class="panel panel-primary">
+                                            <div class="panel-heading">
+                                                Reservas de sala
+                                            </div>
+                                            <div class="panel-body">
+                                                <div class="dataTable_wrapper">
+                                                <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=correounivalle.edu.co_u3j0hknasqnke9ptba2dfpp0l0%40group.calendar.google.com&amp;color=%230F4B38&amp;ctz=America%2FBogota" style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+                                                </div>
+                                            </div>
+                                            <div class="panel-footer">
+                                                Panel Footer
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- /.col-lg-12 -->
                                 </div>
                             </div>
                         </div>
