--- a/admin/pages/rflujo.html
+++ b/admin/pages/rflujo.html
@@ -404,7 +404,7 @@
     <script src="../bower_components/growl/bootstrap-growl.js"></script>
 
     <!-- Chart.js charts -->
-    <script src="../bower_components/Chart.js/Chart.js"></script>
+    <script src="../bower_components/Chart.js/dist/Chart.js"></script>
 
 
     <!-- Custom Scripts -->
