--- a/admin/pages/usuarios.html
+++ b/admin/pages/usuarios.html
@@ -38,6 +38,11 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style type="text/css">
+        .titulo_modal{
+            font-weight: bold;
+        }
+    </style>
 
 </head>
 
@@ -140,10 +145,9 @@
                                             <table class="table table-striped table-bordered table-hover" id="datatables-observaciones">
                                                 <thead>
                                                     <tr>
-                                                        <th>ID</th>
-                                                        <th>Email</th>
-                                                        <th>Tipo</th>
-                                                        <th>Opciones</th>
+                                                        <th width="100">ID</th>
+                                                        <th width="100">Usuario / Rol</th>
+                                                        <th width="50"></th>
                                                     </tr>
                                                 </thead>
                                                 <tbody></tbody>
@@ -171,6 +175,7 @@
                                                     <option value="3">Comunicaciones</option>
                                                     <option value="4">Monitor</option>
                                                     <option value="5">Secretaria</option>
+                                                    <option value="6">Cendopu</option>
                                                 </select>
                                             </div>
                                             <div class="form-group input-group">
@@ -245,6 +250,31 @@
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
             <button type="button" class="btn btn-primary" id="send_nuevaClave">Enviar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Bootstrap Modal -->
+
+    <div class="modal fade" id="modal_turnos" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="exampleModalLabel">Turnos de monitoría: <span class="titulo_modal" id="nombre_monitor"></span></h4>
+          </div>
+          <div class="modal-body">
+                <div class="form-group">
+                    <p class="bg-danger btn-lg" style="display:none"></p>
+                    <p class="bg-info btn-lg" style="display:none"></p>
+                </div>    
+                <input type="hidden" class="form-control" id="id_us">
+                <div class="row" id="turnos_body"></div>
+                    
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-dismiss="modal">ok</button>
           </div>
         </div>
       </div>
