Falta terminar turnos y reportes de cendopu

--- a/admin/pages/rflujo.html
+++ b/admin/pages/rflujo.html
@@ -27,7 +27,7 @@
 
     <!-- growl alert CSS -->
     <link href="../bower_components/growl/css/animate.css" rel="stylesheet">
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+
     <!-- Custom Fonts -->
     <link href="../bower_components/fontawesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
@@ -115,7 +115,7 @@
                         </li>
                         <li >
                             <a  class="hide" id="users-tab" href="usuarios.html"><i class="fa fa-user fa-fw"></i> Usuarios</a>
-                        </li>                      
+                        </li>
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
@@ -145,27 +145,27 @@
 						<!--Collapse -->
 						<div class="well well-small pointer" data-toggle="collapse" data-target="#planilla_mes_s1">
 						  <a class="boton" onclick="go_to('planilla_mes_s1','planilla',1,0)"><i class="fa fa-bars"></i>   Registro del mes</a>
-						</div>						 
+						</div>
 						<div id="planilla_mes_s1" class="collapse out">
 						</div>
 
 						<div class="well" data-toggle="collapse" data-target="#chart_exh_s1">
 						  <a class="boton" onclick="go_to('chart_exh_s1','e_x_h',1,'chart_exh_cv1')"><i class="fa fa-bars"></i>   Flujo de estudiantes por horas</a>
-						</div>						 
+						</div>
 						<div id="chart_exh_s1" class="collapse out">
-                            <canvas id="chart_exh_cv1" width="800" height="400"></canvas>                  
+                            <canvas id="chart_exh_cv1" width="800" height="400"></canvas>
                         </div>
 
 						<div class="well" data-toggle="collapse" data-target="#chart_exd_s1">
 						  <a class="boton" onclick="go_to('chart_exd_s1','e_x_d',1,'chart_exd_cv1')"><i class="fa fa-bars"></i>   Flujo de estudiantes por día (General)</a>
-						</div>						 
+						</div>
 						<div id="chart_exd_s1" class="collapse out">
                             <canvas id="chart_exd_cv1" width="800" height="400"></canvas>
                         </div>
 
 						<div class="well" data-toggle="collapse" data-target="#chart_group_s1">
 						  <a class="boton" onclick="go_to('chart_gr_s1_1','e_x_dd',1,'chart_gr')"><i class="fa fa-bars"></i>   Flujo de estudiantes por día (Detallado)</a>
-						</div>						 
+						</div>
 						<div id="chart_group_s1" class="collapse out">
 							<div class="col-md-4">
 							<div class="panel panel-primary">
@@ -222,27 +222,27 @@
                         <!--Collapse -->
                         <div class="well well-small pointer" data-toggle="collapse" data-target="#planilla_mes_s2">
                           <a class="boton" onclick="go_to('planilla_mes_s2','planilla',2,0)"><i class="fa fa-bars"></i>   Registro del mes</a>
-                        </div>                       
+                        </div>
                         <div id="planilla_mes_s2" class="collapse out">
                         </div>
 
                         <div class="well" data-toggle="collapse" data-target="#chart_exh_s2">
                           <a class="boton" onclick="go_to('chart_exh_s2','e_x_h',2,'chart_exh_cv2')"><i class="fa fa-bars"></i>   Flujo de estudiantes por horas</a>
-                        </div>                       
+                        </div>
                         <div id="chart_exh_s2" class="collapse out">
-                            <canvas id="chart_exh_cv2" width="800" height="400"></canvas>                  
+                            <canvas id="chart_exh_cv2" width="800" height="400"></canvas>
                         </div>
 
                         <div class="well" data-toggle="collapse" data-target="#chart_exd_s2">
                           <a class="boton" onclick="go_to('chart_exd_s2','e_x_d',2,'chart_exd_cv2')"><i class="fa fa-bars"></i>   Flujo de estudiantes por día (General)</a>
-                        </div>                       
+                        </div>
                         <div id="chart_exd_s2" class="collapse out">
                             <canvas id="chart_exd_cv2" width="800" height="400"></canvas>
                         </div>
 
                         <div class="well" data-toggle="collapse" data-target="#chart_group_s2">
                           <a class="boton" onclick="go_to('chart_gr_s2_2','e_x_dd',2,'chart_gr')"><i class="fa fa-bars"></i>   Flujo de estudiantes por día (Detallado)</a>
-                        </div>                       
+                        </div>
                         <div id="chart_group_s2" class="collapse out">
                             <div class="col-md-4">
                             <div class="panel panel-primary">
@@ -299,27 +299,27 @@
                         <!--Collapse -->
                         <div class="well well-small pointer" data-toggle="collapse" data-target="#planilla_mes_s3">
                           <a class="boton" onclick="go_to('planilla_mes_s3','planilla',3,0)"><i class="fa fa-bars"></i>   Registro del mes</a>
-                        </div>                       
+                        </div>
                         <div id="planilla_mes_s3" class="collapse out">
                         </div>
 
                         <div class="well" data-toggle="collapse" data-target="#chart_exh_s3">
                           <a class="boton" onclick="go_to('chart_exh_s3','e_x_h',3,'chart_exh_cv3')"><i class="fa fa-bars"></i>   Flujo de estudiantes por horas</a>
-                        </div>                       
+                        </div>
                         <div id="chart_exh_s3" class="collapse out">
-                            <canvas id="chart_exh_cv3" width="800" height="400"></canvas>                  
+                            <canvas id="chart_exh_cv3" width="800" height="400"></canvas>
                         </div>
 
                         <div class="well" data-toggle="collapse" data-target="#chart_exd_s3">
                           <a class="boton" onclick="go_to('chart_exd_s3','e_x_d',3,'chart_exd_cv3')"><i class="fa fa-bars"></i>   Flujo de estudiantes por día (General)</a>
-                        </div>                       
+                        </div>
                         <div id="chart_exd_s3" class="collapse out">
                             <canvas id="chart_exd_cv3" width="800" height="400"></canvas>
                         </div>
 
                         <div class="well" data-toggle="collapse" data-target="#chart_group_s3">
                           <a class="boton" onclick="go_to('chart_gr_s3_1','e_x_dd',3,'chart_gr')"><i class="fa fa-bars"></i>   Flujo de estudiantes por día (Detallado)</a>
-                        </div>                       
+                        </div>
                         <div id="chart_group_s3" class="collapse out">
                             <div class="col-md-4">
                             <div class="panel panel-primary">
@@ -404,6 +404,7 @@
     <script src="../bower_components/growl/bootstrap-growl.js"></script>
 
     <!-- Chart.js charts -->
+    <script src="../bower_components/moment/moment.js"></script>
     <script src="../bower_components/Chart.js/Chart.js"></script>
 
 
@@ -416,8 +417,47 @@
         //get_flujoFranjas(1); linea que hace el llamado a las gráficas
         cbx_mes();
      });
-    </script>    
-
+    </script>
+    <canvas id="myChartx" width="400" height="400"></canvas>
+<script>
+var ctx = document.getElementById("myChartx");
+var myChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+        labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+        datasets: [{
+            label: '# of Votes',
+            data: [12, 19, 3, 5, 2, 3],
+            backgroundColor: [
+                'rgba(255, 99, 132, 0.2)',
+                'rgba(54, 162, 235, 0.2)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+                'rgba(153, 102, 255, 0.2)',
+                'rgba(255, 159, 64, 0.2)'
+            ],
+            borderColor: [
+                'rgba(255,99,132,1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+        }]
+    },
+    options: {
+        scales: {
+            yAxes: [{
+                ticks: {
+                    beginAtZero:true
+                }
+            }]
+        }
+    }
+});
+</script>
 </body>
 
 </html>
