--- a/admin/pages/usuarios.html
+++ b/admin/pages/usuarios.html
@@ -201,6 +201,7 @@
                                     </div>
                                     </form>
                                 </div>
+                                <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
                             </div>
                             <!-- /.col-lg-4 -->
                         </div>
